# jirsi-platform

./: .env.docker.example  .env.example  .gitignore  Cargo.toml  DOCKER_SETUP.md  Dockerfile.fly  MIGRATION_GUIDE.md  README.md  add_pipeline_user.sql  deal_fields.json  deal_fields_ascii.json  docker-compose.yml  fix_field_types.sql  fix_missing_data.sql  fly.toml  package-lock.json  package.json  playwright.config.js  populate_all_options.sql  property_fields.json  run_migrations.sh  seed_core_entities.ps1  seed_crm_entities.sql  seed_db.ps1  seed_missing_entities.sql  setup.ps1  setup.sh  start-app.ps1  start-jirsi.bat  stop-jirsi.bat  tailwind.config.js  temp.json  verify_core_entities.ps1  verify_crm_v1.ps1  verify_kernel_hardening.ps1  verify_phase_1.ps1  verify_phase_2.ps1  verify_phase_3.ps1  verify_slice_1.ps1
crates/app-crm/: Cargo.toml
crates/app-crm/src/: entities.rs  lib.rs  seed.rs
crates/app-properties/: Cargo.toml
crates/app-properties/src/: entities.rs  lib.rs
crates/backend-api/: Cargo.toml
crates/backend-api/benches/: performance.rs
crates/backend-api/src/: cache.rs  config.rs  error.rs  events.rs  lib.rs  main.rs  performance.rs  seed.rs  state.rs  workflow_trigger.rs
crates/backend-api/src/ai/: embeddings.rs  mod.rs  openai.rs  service.rs
crates/backend-api/src/cqrs/: aggregates.rs  commands.rs  event_bus.rs  event_store.rs  events.rs  mod.rs  projections.rs  tests.rs
crates/backend-api/src/gateway/: mod.rs
crates/backend-api/src/jobs/: mod.rs  queue.rs  scheduled_trigger_runner.rs  scheduler.rs  snapshot_cleanup.rs  worker.rs
crates/backend-api/src/middleware/: audit_log.rs  database.rs  mod.rs  permission.rs  rate_limit.rs  tenant.rs
crates/backend-api/src/observability/: metrics.rs  mod.rs  tracing_config.rs
crates/backend-api/src/routes/: ai_chat.rs  analytics.rs  associations.rs  audit.rs  auth.rs  crdt_sync.rs  deal_commands.rs  entities.rs  inbox.rs  integrations.rs  interactions.rs  metadata.rs  mod.rs  properties.rs  public.rs  public_listing.rs  records.rs  search.rs  sync.rs  tasks.rs  tenant.rs  views.rs  voice.rs  webhooks.rs  workflow_graph.rs  workflow_triggers.rs  workflows.rs  ws.rs
crates/backend-api/src/websocket/: mod.rs
crates/backend-api/tests/: crdt_collaboration_test.rs  realestate_test.rs  rls_isolation_test.rs  security_audit_test.rs  workflow_integration_test.rs
crates/core-analytics/: Cargo.toml
crates/core-analytics/src/: dashboard.rs  lib.rs  metrics.rs  search.rs  targets.rs
crates/core-auth/: Cargo.toml
crates/core-auth/src/: error.rs  lib.rs  middleware.rs  password.rs  session.rs  tenant.rs  user.rs
crates/core-engagement/: Cargo.toml
crates/core-engagement/src/: calendar.rs  inbox.rs  interaction.rs  lib.rs
crates/core-integrations/: Cargo.toml
crates/core-integrations/src/: encryption.rs  lib.rs  models.rs  service.rs  webhook.rs
crates/core-integrations/src/providers/: facebook.rs  mod.rs  twilio.rs
crates/core-models/: Cargo.toml
crates/core-models/src/: association.rs  crdt.rs  entity.rs  event.rs  field.rs  lib.rs  lib.udl  logic.rs  metadata.rs  node.rs  sync.rs  tenant.rs  user.rs  validation.rs  view.rs
crates/core-models/tests/: sync_integration_tests.rs
crates/core-node-engine/: Cargo.toml
crates/core-node-engine/src/: ai.rs  circuit_breaker.rs  context.rs  error.rs  events.rs  executor.rs  lib.rs  matching.rs  nodes.rs  notifications.rs  payments.rs  plugin_sandbox.rs  repository.rs  script_node.rs  state_machine.rs  strategies.rs  wasm_executor.rs  whatsapp.rs
crates/core-node-engine/wit/: plugin.wit
crates/frontend-web/: Cargo.toml  Trunk.toml  design_tokens.css  index.html  input.css  styles.css
crates/frontend-web/assets/: sw.js
crates/frontend-web/dist_backup_20251227075859/.stage/: frontend-web-fcfed4d37d591919.js
crates/frontend-web/dist_clean_8081/: frontend-web-4bd8e169eadf7433.js  index.html  styles-3781883256e63a23.css
crates/frontend-web/dist_old_20251222_212134/.stage/: frontend-web-4bb9ca37d810da84.js  styles-167bcbae397f20ba.css
crates/frontend-web/public/: service-worker.js
crates/frontend-web/public/workers/: sync-worker.js
crates/frontend-web/src/: api.rs  app.rs  lib.rs  models.rs  utils.rs
crates/frontend-web/src/components/: action_bar.rs  association_modal.rs  async_entity_select.rs  async_select.rs  audit_timeline.rs  bottom_nav.rs  bottom_sheet.rs  calendar.rs  canvas.rs  chart.rs  collaborative_field.rs  column_selector.rs  command_palette.rs  composer.rs  conflict_resolver.rs  create_modal.rs  dialer_widget.rs  editable_table.rs  entity_hover_card.rs  field.rs  field_renderer.rs  filter_builder.rs  form.rs  holographic_shell.rs  inbox_thread_list.rs  kanban.rs  location_map.rs  log_activity_modal.rs  map.rs  message_bubble.rs  mobile_card.rs  mod.rs  neural_status.rs  node_graph.rs  pwa_install.rs  rich_text_editor.rs  rule_builder.rs  shell.rs  sidebar.rs  signature_pad.rs  (+9 more)
crates/frontend-web/src/context/: mobile.rs  mod.rs  network_status.rs  permission.rs  socket.rs  theme.rs  theme_context.rs  websocket.rs
crates/frontend-web/src/core/: api.rs  entities.rs  mod.rs  models.rs  shortcuts.rs  sync_engine.rs
crates/frontend-web/src/design_system/: badges.rs  cards.rs  mod.rs
crates/frontend-web/src/features/: mod.rs
crates/frontend-web/src/hooks/: use_websocket.rs
crates/frontend-web/src/layouts/: holographic_shell.rs  mod.rs  public_layout.rs
crates/frontend-web/src/offline/: crdt.rs  db.rs  metadata_index.rs  mod.rs  sync.rs
crates/frontend-web/src/pages/: agent_command_center.rs  app_store.rs  automation.rs  broker_dashboard.rs  component_playground.rs  dashboard.rs  entity_detail.rs  entity_list.rs  home.rs  inbox.rs  landlord_onboarding.rs  landlord_portal.rs  login.rs  mod.rs  profile.rs  register.rs  reports.rs  settings.rs  tenant_portal.rs  workflow_editor.rs  workflow_list.rs
crates/frontend-web/src/widgets/: mod.rs
crates/frontend-web/src/workers/: sync_worker.rs
crates/jobs-runner/: Cargo.toml
crates/jobs-runner/src/: email.rs  jobs.rs  main.rs  whatsapp.rs
docs/: accessibility.md  (+8 more)
(+132 files in other folders)
