[package]
name = "app-properties"
description = "Real Estate Properties application"
version.workspace = true
edition.workspace = true

[dependencies]
core-models = { path = "../core-models" }
core-metadata = { path = "../core-metadata" }
app-crm = { path = "../app-crm" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
