[package]
name = "backend-api"
description = "Axum HTTP API server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
core-models = { path = "../core-models" }
core-metadata = { path = "../core-metadata" }
core-auth = { path = "../core-auth" }
core-node-engine = { path = "../core-node-engine" }
core-engagement = { path = "../core-engagement" }
core-analytics = { path = "../core-analytics" }
app-crm = { path = "../app-crm" }
app-properties = { path = "../app-properties" }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1.10"
rand = "0.8"

# WebSocket support
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
futures = "0.3"
dashmap = "5.5"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
