[package]
name = "core-auth"
description = "Authentication and authorization services"
version.workspace = true
edition.workspace = true

[dependencies]
core-models = { path = "../core-models" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
axum = { workspace = true }
sha2 = "0.10"
hex = "0.4"

