[package]
name = "core-integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# Hashing for signature verification
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"

# Bytes for webhook payloads
bytes = "1"

# HTTP types
http = "1"

# URL encoding for Twilio form data
url = "2"
