[package]
name = "core-models"
description = "System DNA: Shared domain models, logic engine, and physics"
version.workspace = true
edition.workspace = true

[features]
default = []
# Enable async database traits only when compiling for the server
backend = ["dep:sqlx"]

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "js"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
rust_decimal = "1.35"
# Physics Engine (CRDT)
yrs = { workspace = true }

[dependencies.sqlx]
workspace = true
optional = true
features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"]

[dev-dependencies]
tokio = { workspace = true }
