[package]
name = "core-node-engine"
description = "Node graph execution engine for workflows and automations"
version.workspace = true
edition.workspace = true

[dependencies]
core-models = { path = "../core-models" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

# Backend-only dependencies
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["backend"]
backend = ["dep:sqlx", "dep:tokio"]

