[package]
name = "core-node-engine"
description = "Node graph execution engine for workflows and automations"
version.workspace = true
edition.workspace = true

[dependencies]
core-models = { path = "../core-models" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

# WASM Runtime for ScriptNodes (backend only - not for wasm32 target)
extism = { version = "1.0", optional = true }
wasmtime = { version = "16.0", optional = true }
base64 = "0.21"

# HTTP for fetching remote plugins
reqwest = { version = "0.11", features = ["json"], optional = true }

# Backend-only dependencies
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["backend"]
backend = ["dep:sqlx", "dep:tokio", "dep:reqwest", "dep:extism", "dep:wasmtime"]
wasm = []  # For WASM frontend builds - excludes native-only deps

