[package]
name = "frontend-web"
description = "Leptos WebAssembly frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "js", "serde"] }
chrono = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
urlencoding = "2.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Storage",
]

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
