[package]
name = "frontend-web"
description = "Leptos WebAssembly frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
core-models = { path = "../core-models" }
core-node-engine = { path = "../core-node-engine", default-features = false, features = ["wasm"] }
uuid = { version = "1", features = ["v4", "js", "serde"] }
chrono = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.4"
gloo-console = "0.2"
urlencoding = "2.1"
js-sys = "0.3"

# Browser APIs and utilities
leptos-use = "0.13"
base64 = "0.21"
regex = "1"
futures = "0.3"

# CRDT for real-time collaboration (Yjs protocol)
yrs = "0.18"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "Event",
    "EventTarget",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Storage",
]

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
