[package]
name = "jobs-runner"
description = "Background job worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
core-models = { path = "../core-models" }
core-node-engine = { path = "../core-node-engine" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Email (SMTP)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# HTTP client for WhatsApp/Twilio API
reqwest = { version = "0.11", features = ["json"] }
